# ingest-metadata

./: .cruft.json  .gitignore  .yamllint-config  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.public.mk  config.yaml  index.html  justfile  mkdocs.yml  project.Makefile  project.justfile  pyproject.toml  sitemap.xml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
IngestMetadata/: index.html
IngestMetadataCollection/: index.html
IngestMetadataFile/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
Sparqlpath/: index.html
String/: index.html
TargetGraphType/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
created_by/: index.html
creation_date/: index.html
description/: index.html
edge_predicates/: index.html
entries/: index.html
examples/: README.md
file_created_by/: index.html
file_creation_date/: index.html
file_name/: index.html
id/: index.html
ingest-metadata/: index.html
ingest_code_url/: index.html
ingest_code_version/: index.html
ingest_guide_url/: index.html
ingest_metadata/: index.html
kgx_ingest_metadata_schema/: index.html
name/: index.html
node_categories/: index.html
target_name/: index.html
(+61 files in other folders)
