[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "ingest_metadata"
description = "Schema hosting relevant metadata for a data transformation conformant to the Biolink Model"
authors = [
  {name = "Matt Brush", email = "matt@tislab.org"},
]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/ingest_metadata/schema", "project"]

requires-python = ">=3.9,<4.0"

dynamic = ["version"]

dependencies = [
  "linkml-runtime>=1.1.24",
  "yamllint>=1.37.1,<2.0.0",
]

[dependency-groups]
dev = [
  "linkml>=1.3.5",
  "mkdocs-material>=8.2.8",
  "mkdocs-mermaid2-plugin>=1.1.1",
  "schemasheets>=0.1.14",
  "jupyter>=1.0.0",
  "mknotebooks>=0.8.0",
  "pytest>=6.0",
  "codespell",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_metadata"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
